# MiaowaCode

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PRD.md
fixtures/sample_python_project/: README.md  pyproject.toml
fixtures/sample_python_project/src/sample_app/: __init__.py  main.py
fixtures/sample_python_project/tests/: test_main.py
scripts/: install.ps1  install.sh  pre-commit.sh
src/miaowa/: __init__.py  main.py
src/miaowa/agent/: __init__.py  context.py  executor.py  planner.py  session.py
src/miaowa/cli/: __init__.py  history.py  parser.py  renderer.py  repl.py
src/miaowa/core/: __init__.py  config.py  exceptions.py  logger.py  types.py
src/miaowa/llm/: __init__.py  base.py  deepseek.py  tokenizer.py  types.py
src/miaowa/prompts/: __init__.py  manager.py  system.py
src/miaowa/tools/: __init__.py  analyzer.py  base.py  filesystem.py  gitignore_filter.py  registry.py  search.py  validator.py
tests/: conftest.py
tests/test_agent/: test_executor.py  test_planner.py
tests/test_cli/: test_history.py  test_main.py  test_parser.py  test_renderer.py  test_repl.py
tests/test_core/: test_config.py  test_exceptions.py  test_logger.py
tests/test_llm/: test_deepseek.py  test_tokenizer.py
tests/test_tools/: test_analyzer.py  test_filesystem.py  test_gitignore_filter.py  test_search.py
