[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "miaowa"
version = "0.1.0"
description = "轻量级终端 AI Agent 工具，基于 DeepSeek 大模型"
authors = ["Miaowa Team <dev@miaowa.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/miaowa/miaowa-code"
repository = "https://github.com/miaowa/miaowa-code"
documentation = "https://github.com/miaowa/miaowa-code"
keywords = ["cli", "ai", "agent", "deepseek", "terminal", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.10"
openai = ">=1.30"
httpx = ">=0.27"
prompt-toolkit = ">=3.0"
rich = ">=13.7"
loguru = ">=0.7"
pyyaml = ">=6.0"
python-dotenv = ">=1.0"
aiofiles = ">=24.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
pytest-cov = ">=5.0"
ruff = ">=0.4"
mypy = ">=1.8"

[tool.poetry.scripts]
miaowa = "miaowa.main:cli_entry"

[tool.poetry.urls]
"Issues" = "https://github.com/miaowa/miaowa-code/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
